[package]
name = "liganite-node"
description = "Implementation of a liganite network node"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { features = ["derive"], workspace = true }
futures = { features = ["thread-pool"], workspace = true }
serde_json = { workspace = true, default-features = true }
jsonrpsee = { features = ["server"], workspace = true }

# Local Dependencies
liganite-runtime = { workspace = true }

# Substrate client
sc-basic-authorship = { workspace = true, default-features = true }
sc-cli = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus = { workspace = true, default-features = true }
sc-consensus-aura = { workspace = true, default-features = true }
sc-consensus-grandpa = { workspace = true, default-features = true }
sc-executor = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-offchain = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sc-telemetry = { workspace = true, default-features = true }
sc-transaction-pool = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }

# Substrate primitives
sp-api = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-consensus-aura = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-genesis-builder = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }

# Frame and pallets
frame-system = { workspace = true, default-features = true }
frame-metadata-hash-extension = { workspace = true, default-features = true }
pallet-transaction-payment = { workspace = true, default-features = true }

# RPC related
pallet-transaction-payment-rpc = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true, default-features = true }

# Runtime benchmarking
frame-benchmarking-cli = { workspace = true, default-features = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
default = ["std"]
std = ["liganite-runtime/std"]
# Dependencies that are only required if runtime benchmarking should be built.
runtime-benchmarks = [
    "frame-benchmarking-cli/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-transaction-payment/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
    "liganite-runtime/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
    "frame-system/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "liganite-runtime/try-runtime",
    "sp-runtime/try-runtime",
]
