[package]
name = "liganite-games"
description = "Pallet to maintain games on the network"
version = "0.0.1"
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
liganite-primitives = { workspace = true }

scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# frame deps
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
liganite-publish = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "liganite-primitives/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
